# netbox_wireless_circuits

./: .gitignore  LICENSE  README.md  pyproject.toml  sample2.csv
.claude/agents/: docs-maintainer.md
netbox_wireless_circuits/: __init__.py  choices.py  filtersets.py  forms.py  llm.py  models.py  navigation.py  nbxsync_sync.py  pcn_import.py  signals.py  tables.py  tagging.py  template_content.py  urls.py  views.py  zabbix.py
netbox_wireless_circuits/api/: serializers.py  urls.py  views.py
netbox_wireless_circuits/importers/: __init__.py  base.py  comsearch.py  engine.py  jobs.py
netbox_wireless_circuits/management/commands/: backfill_import_sites.py  configure_llm.py  import_wireless_csv.py  sync_wireless_zabbix.py
netbox_wireless_circuits/migrations/: 0001_initial.py  0002_wirelessglobalsettings_wirelesstargetexception.py  0003_globalsettings_zabbix.py  0004_llm_settings_provider.py  0005_wirelessbandtolerance.py  0006_seed_band_tolerances.py  0007_profile_carrier_config.py  0008_profile_created_via_import.py  0009_globalsettings_link_type_tag.py  0010_profile_pcn_document.py  0011_wirelessantenna.py  0012_profile_import_source_key.py  0013_endpoint_license_fields.py  0014_wirelessimportstatusmap.py
netbox_wireless_circuits/templates/netbox_wireless_circuits/: circuit_wireless_panel.html  circuit_wireless_tab.html  llm_models.html  pcn_import.html  wireless_import.html  wirelessantenna.html  wirelessbandtolerance.html  wirelesscircuitendpoint.html  wirelesslicenseprofile.html  wirelesslicenseprofile_list.html  wirelessllmprovider.html  wirelessmodulationtarget.html  wirelesstargetexception.html
netbox_wireless_circuits/templates/netbox_wireless_circuits/inc/: endpoint_card.html  endpoints_panel.html  exceptions_panel.html  modulation_panel.html  modulation_table.html
netbox_wireless_circuits/tests/: test_api.py  test_comsearch_import.py  test_extras.py  test_filtersets.py  test_llm.py  test_models.py  test_nbxsync_sync.py  test_pcn_import.py  test_tagging.py  test_zabbix.py
