[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-wireless-circuits"
version = "0.1.0"
description = "NetBox plugin for tracking licensed microwave and millimeter-wave wireless links as native Circuits."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nextlink Internet", email = "engineering@nextlinkinternet.com" },
]
keywords = ["netbox", "netbox-plugin", "wireless", "microwave", "circuits"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
]

# No runtime dependencies beyond NetBox itself.
dependencies = []

# Optional integrations. nbxsync is NOT required for the plugin to function;
# install it only if you want the Zabbix host-macro/tag sync:
#   pip install netbox-wireless-circuits[zabbix]
[project.optional-dependencies]
zabbix = ["nbxsync"]
# LLM-assisted PCN PDF import. Install only the providers you use; the importer
# skips any provider whose SDK is absent. API keys come from env / PLUGINS_CONFIG.
llm = ["anthropic", "google-genai", "openai"]

[project.urls]
Homepage = "https://nextlinkinternet.com"
Source = "https://github.com/Nextlink-Internet/netbox_wireless_circuits"
Issues = "https://github.com/Nextlink-Internet/netbox_wireless_circuits/issues"

[tool.setuptools.packages.find]
include = ["netbox_wireless_circuits*"]

[tool.setuptools.package-data]
netbox_wireless_circuits = ["templates/**/*.html"]
